@@ -3,6 +3,9 @@
 	* src/Makefile.am: Patched to make freebsd-alpha port build.
 	From: Akifyev Sergey <asa@gascom.ru>, Joe Marcus Clarke <marcus@freebsd.org>,
 	Kris Kennaway <kris@obsecurity.org>
+	* seahorse-key-store: Added ::get_key_from_model
+	* seahorse-recipients: Simplified using seahorse_key_store_get_key_from_model,
+	can use for recipients ops again
 
 2003-03-18  Jacob Perkins  <jap1@users.sourceforge.net>
 
